# unblind

./: .gitignore  1_❤️‍🔥_Unblind.py  CONTRIBUTING.md  LICENSE  README.md  hola.txt  pyproject.toml  requirements.txt  setup.py
data/process_data/s3p/: ut_ug_m_data.csv
data/process_data/s3s/: ut_ug_m_data.csv
data/processed_data/s3p/: ut_ug_m_data.csv
data/processed_data/s3s/: ut_ug_m_data.csv
pages/: 1_👀_Quienes_somos.py  2_🐍_Unblind_Python_package.py  3_🏗️_Sistema_2_-_Contrataciones.py  3_💸_Sistema_1_-_Declaraciones.py  4_🏗️_Sistema_2_-_Contrataciones.py  4_🚓_Sistema_3_-_Sancionados.py  5_💸_Sistema_1_-_Declaraciones.py  5_🚓_Sistema_3_-_Sancionados.py  6_🥅_Varios_sistemas.py
unblind/: __init__.py  dataviz.py  etl.py  ml.py  utils.py
